compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__documentation__double_quotes_are_escaped_in_module_comment.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/documentation.rs
assertion_line: 65
expression: "\n//// \"quotes!\"\n\npub fn main() { 1 }"
snapshot_kind: text
---
----- SOURCE CODE

//// "quotes!"

pub fn main() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-if(?OTP_RELEASE >= 27).
-define(MODULEDOC(Str), -moduledoc(Str)).
-define(DOC(Str), -doc(Str)).
-else.
-define(MODULEDOC(Str), -compile([])).
-define(DOC(Str), -compile([])).
-endif.

?MODULEDOC(" \"quotes!\"\n").

-file("project/test/my/mod.gleam", 4).
-spec main() -> integer().
main() ->
    1.
