compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__documentation__function_with_multiline_documentation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/documentation.rs
assertion_line: 14
expression: "\n/// Function doc!\n/// Hello!!\n///\npub fn documented() { 1 }"
snapshot_kind: text
---
----- SOURCE CODE

/// Function doc!
/// Hello!!
///
pub fn documented() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([documented/0]).

-if(?OTP_RELEASE >= 27).
-define(MODULEDOC(Str), -moduledoc(Str)).
-define(DOC(Str), -doc(Str)).
-else.
-define(MODULEDOC(Str), -compile([])).
-define(DOC(Str), -compile([])).
-endif.

-file("project/test/my/mod.gleam", 5).
?DOC(
    " Function doc!\n"
    " Hello!!\n"
).
-spec documented() -> integer().
documented() ->
    1.
