compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__documentation__internal_function_has_no_documentation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/documentation.rs
assertion_line: 85
expression: "\n/// hidden!\n@internal\npub fn main() { 1 }"
snapshot_kind: text
---
----- SOURCE CODE

/// hidden!
@internal
pub fn main() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-if(?OTP_RELEASE >= 27).
-define(MODULEDOC(Str), -moduledoc(Str)).
-define(DOC(Str), -doc(Str)).
-else.
-define(MODULEDOC(Str), -compile([])).
-define(DOC(Str), -compile([])).
-endif.

-file("project/test/my/mod.gleam", 4).
?DOC(false).
-spec main() -> integer().
main() ->
    1.
