compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__documentation__multi_line_module_comment.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/documentation.rs
assertion_line: 53
expression: "\n//// Hello! This is a multi-\n//// line module comment.\n////\n\npub fn main() { 1 }"
snapshot_kind: text
---
----- SOURCE CODE

//// Hello! This is a multi-
//// line module comment.
////

pub fn main() { 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-if(?OTP_RELEASE >= 27).
-define(MODULEDOC(Str), -moduledoc(Str)).
-define(DOC(Str), -doc(Str)).
-else.
-define(MODULEDOC(Str), -compile([])).
-define(DOC(Str), -compile([])).
-endif.

?MODULEDOC(
    " Hello! This is a multi-\n"
    " line module comment.\n"
    "\n"
).

-file("project/test/my/mod.gleam", 6).
-spec main() -> integer().
main() ->
    1.
